# petflow-ai

./: .gitignore  conftest.py  pyproject.toml
apps/accounts/: models.py  permissions.py
apps/accounts/api/: serializers.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_user_role_alter_user_email_alter_user_tenant.py
apps/accounts/tests/: test_permissions.py
apps/core/: managers.py  middleware.py  models.py
apps/pets/: models.py  serializers.py  services.py
apps/pets/api/: urls.py  views.py
apps/pets/migrations/: 0001_initial.py
apps/pets/services/: __init__.py  owner_service.py  pet_service.py
apps/pets/tests/: factories.py  test_owner_model.py  test_owner_service.py  test_pet_model.py  test_pet_queries.py  test_pet_service.py
apps/tenants/: admin.py  middleware.py  models.py
apps/tenants/migrations/: 0001_initial.py
apps/tenants/tests/: test_tenant_middleware.py
config/: urls.py
config/settings/: base.py
tests/unit/: test_tenant_model.py
